plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude("src/generated/**/.cache")
}

repositories {
    // Dépôt de JEI (mezz.jei) et d'autres mods de l'écosystème.
    maven {
        name = "Jared's maven (JEI)"
        url = "https://maven.blamejared.com/"
    }
    // Modrinth — pour Jade (HUD d'informations de bloc au survol).
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content { includeGroup "maven.modrinth" }
    }
}

base {
    archivesName = mod_id
}

// Mojang distribue Java 21 pour 1.21.x — le mod doit cibler Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    // Configurations de lancement par défaut. À garder telles quelles pour commencer.
    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        // Lance les GameTest sans interface et rend la main : le build echoue si
        // un test echoue. ModDevGradle n'a pas de raccourci gameTestServer() —
        // le type est declare par le userdev de NeoForge, on le pose a la main.
        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }
        data {
            data()
            // Génère automatiquement le JSON (blockstates, models, recettes, loot tables, etc.)
            // dans src/generated/resources/ à partir des DataProvider Java.
            programArguments.addAll '--mod', project.mod_id, '--all', '--output',
                file('src/generated/resources/').getAbsolutePath(), '--existing',
                file('src/main/resources/').getAbsolutePath()
        }
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Le datagen met en cache les fichiers déjà écrits (HashCache). Or on édite
// parfois un JSON généré pour tester une recette en jeu (+ /reload) : un cache
// périmé conserverait alors cette édition manuelle au lieu de régénérer la valeur
// du code. On vide donc le cache avant chaque runData, pour que la sortie
// corresponde TOUJOURS aux DataProvider Java.
tasks.matching { it.name == 'runData' }.configureEach {
    doFirst {
        delete "${projectDir}/src/generated/resources/.cache"
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    // JEI — visualisation des recettes en jeu. L'API en compileOnly (pour écrire
    // le plugin), le mod complet en localRuntime (chargé dans runClient mais pas
    // exporté dans le jar publié).
    compileOnly "mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}"
    localRuntime "mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}"

    // Jade — HUD d'informations de bloc au survol (dev). Chargé dans runClient,
    // pas d'intégration de code requise pour l'affichage de base.
    localRuntime "maven.modrinth:jade:${jade_version}"
}

// Génère neoforge.mods.toml à partir de src/main/templates/META-INF/neoforge.mods.toml
// en remplaçant les ${...} par les valeurs de gradle.properties.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
        minecraft_version      : minecraft_version,
        minecraft_version_range: minecraft_version_range,
        neo_version            : neo_version,
        loader_version_range   : loader_version_range,
        mod_id                 : mod_id,
        mod_name               : mod_name,
        mod_license            : mod_license,
        mod_version            : mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
